// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vuorovaikutus suorita suunnitteluvaihe saamen kielellä onnistuneesti 1`] = `
Object {
  "description": "Vuorovaikutuskierros saamenkielisellä kutsulla",
  "mockedtime": "2020-01-01T02:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "LadattuTiedosto",
      "jarjestys": undefined,
      "nimi": "saamekutsu.pdf",
      "tiedosto": "/yllapito/tiedostot/projekti/3/suunnitteluvaihe/vuorovaikutus_1/saamekutsu.pdf",
      "tila": "VALMIS",
      "tuotu": "2020-01-01T02:00",
      "uuid": "00000002-a32c-4f8b-a9f9-7eeb06d2a78c",
    },
    "__typename": "VuorovaikutusKutsuSaamePDFt",
  },
}
`;

exports[`Vuorovaikutus suorita suunnitteluvaihe saamen kielellä onnistuneesti 2`] = `
Object {
  "yllapito S3 files Vuorovaikutuskierros saamenkielisellä kutsulla": Object {
    "/vuorovaikutus_1/saamekutsu.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Vuorovaikutus suorita suunnitteluvaihe saamen kielellä onnistuneesti 3`] = `
Object {
  "description": "Vuorovaikutuskierroksen kutsu saamenkielisellä kuulutuksella ja ilmoituksella",
  "mockedtime": "2022-04-28T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "LadattuTiedosto",
      "jarjestys": undefined,
      "nimi": "saamekutsu.pdf",
      "tiedosto": "/yllapito/tiedostot/projekti/3/suunnitteluvaihe/vuorovaikutus_1/saamekutsu.pdf",
      "tila": "VALMIS",
      "tuotu": "2020-01-01T02:00",
      "uuid": "00000002-a32c-4f8b-a9f9-7eeb06d2a78c",
    },
    "__typename": "VuorovaikutusKutsuSaamePDFt",
  },
}
`;

exports[`Vuorovaikutus suorita suunnitteluvaihe saamen kielellä onnistuneesti 4`] = `
Object {
  "yllapito S3 files Vuorovaikutuskierrosjulkaisu saamenkielisellä kutsulla ylläpidossa": Object {
    "/vuorovaikutus_1/T413 Kutsu vuorovaikutukseen.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T413%20Kutsu%20vuorovaikutukseen.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU",
      "checksum": "ABC123",
      "publishDate": "2022-04-28T00:00:00+03:00",
    },
    "/vuorovaikutus_1/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU_LAHETEKIRJE",
      "checksum": "ABC123",
    },
    "/vuorovaikutus_1/saamekutsu.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU",
      "checksum": "ABC123",
    },
  },
}
`;

exports[`Vuorovaikutus suorita suunnitteluvaihe saamen kielellä onnistuneesti 5`] = `
Object {
  "description": "Julkisen vuorovaikutuksen saamenkielinen kutsu",
  "mockedtime": "2022-04-28T00:00",
  "obj": Object {
    "POHJOISSAAME": Object {
      "__typename": "LadattuTiedosto",
      "jarjestys": undefined,
      "nimi": "saamekutsu.pdf",
      "tiedosto": "/tiedostot/suunnitelma/3/suunnitteluvaihe/vuorovaikutus_1/saamekutsu.pdf",
      "tila": "VALMIS",
      "tuotu": "2020-01-01T02:00",
      "uuid": "00000002-a32c-4f8b-a9f9-7eeb06d2a78c",
    },
    "__typename": "VuorovaikutusKutsuSaamePDFt",
  },
}
`;

exports[`Vuorovaikutus suorita suunnitteluvaihe saamen kielellä onnistuneesti 6`] = `
Object {
  "public S3 files Julkisen vuorovaikutuksen tiedostot saamenkielisellä kutsulla": Object {
    "/vuorovaikutus_1/T413 Kutsu vuorovaikutukseen.pdf": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T413%20Kutsu%20vuorovaikutukseen.pdf",
      "ContentType": "application/pdf",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU",
      "checksum": "ABC123",
      "publishDate": "2022-04-28T00:00:00+03:00",
    },
    "/vuorovaikutus_1/lähetekirje.eml": FileMetadata {
      "ContentDisposition": "attachment; filename*=UTF-8''l%C3%A4hetekirje.eml",
      "ContentType": "message/rfc822",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU_LAHETEKIRJE",
      "checksum": "ABC123",
      "publishDate": "2022-04-28T00:00:00+03:00",
    },
    "/vuorovaikutus_1/saamekutsu.pdf": FileMetadata {
      "ContentDisposition": undefined,
      "ContentType": "image/png",
      "asiakirjaTyyppi": "YLEISOTILAISUUS_KUTSU",
      "checksum": "ABC123",
      "publishDate": "2022-04-28T00:00:00+03:00",
    },
  },
}
`;
